<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:background="@drawable/layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/last_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/finished"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>